trunk/Archive2/3e/822bfb06d4c830/output
main.cpp: In function 'int main()':
main.cpp:16:10: error: use of deleted function 'constexpr a::a(const a&)'
     a b(d);
          ^
main.cpp:2:7: note: 'constexpr a::a(const a&)' is implicitly declared as deleted because 'a' declares a move constructor or move assignment operator
 class a
       ^
