trunk/Archive2/3e/822bfb06d4c830/main.cpp
#include<iostream>
class a
{
public:
a(){}
    a(a&& b){}
};
class b
{
    a c;
};

int main()
{
	a d;
    a b(d);
}

